fix static build bustage on solaris (bug 187755).  patch by Roland.Mainz@informatik.med.uni-giessen.de, r/sr=me.